Fix profile image dummy showing on small devices.

--- a/public/assets/styles/kevinMain.css
+++ b/public/assets/styles/kevinMain.css
@@ -371,7 +371,7 @@ footer a {
 }
 
 @media (max-width: 590px) {
-    .profileImage {
+    .profileImage,.profileImageDummy {
         display: none;
     }
 
